--- a/client/views/accueil.html
+++ b/client/views/accueil.html
@@ -1,12 +1,27 @@
 <!doctype html>
 <html lang="fr">
+
 <head>
   <meta charset="utf-8">
   <title>Accueil - Conso App 2.0</title>
   <link rel="stylesheet" href="/static/css/style.css">
+  <script src="https://kit.fontawesome.com/d30d61b515.js" crossorigin="anonymous"></script>
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
+    integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 </head>
+
 <body>
+  <header>
+    <i class="fas fa-home"></i>
+    <p>Conso Enquete</p>
+    <i class="fas fa-map-marked-alt"></i>
+    <i class="fas fa-shopping-basket"></i>
+    <i class="fas fa-user-alt"></i>
+    <i class="fas fa-sign-in-alt"></i>
+  </header>
+
   <h1>Accueil</h1>
-  <p>Bonjour</p>
+  <p>Bienvenue</p>
 </body>
+
 </html>
