--- a/client/views/connexion.html
+++ b/client/views/connexion.html
@@ -1,20 +1,34 @@
 <!doctype html>
 <html lang="fr">
+
 <head>
   <meta charset="utf-8">
-  <title>Connexion - Conso App 2.0</title>
+  <title>Accueil - Conso App 2.0</title>
   <link rel="stylesheet" href="/static/css/style.css">
+  <script src="https://kit.fontawesome.com/d30d61b515.js" crossorigin="anonymous"></script>
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
+    integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 </head>
+
 <body>
-  
+  <header>
+    <i class="fas fa-home"></i>
+    <p>Conso Enquete</p>
+    <i class="fas fa-map-marked-alt"></i>
+    <i class="fas fa-shopping-basket"></i>
+    <i class="fas fa-user-alt"></i>
+    <i class="fas fa-sign-in-alt"></i>
+  </header>
+
   <h1>Connexion</h1>
   <div class="zone">
-  <p>Adresse mail :</p>
-  <input type="text">
-  <p>Mot de passe :</p>
-  <input type="text">
-  <button type="button">Se connecter</button>
-  <p>Pas de compte ? <a href="/inscription">S'inscrire</a></p>
+    <p>Adresse mail :</p>
+    <input type="text">
+    <p>Mot de passe :</p>
+    <input type="password">
+    <button type="button">Se connecter</button>
+    <p>Pas de compte ? <a href="/inscription">S'inscrire</a></p>
   </div>
 </body>
+
 </html>
