--- a/client/views/inscription.html
+++ b/client/views/inscription.html
@@ -1,12 +1,38 @@
 <!doctype html>
 <html lang="fr">
+
 <head>
-  <meta charset="utf-8">
-  <title>Accueil - Conso App 2.0</title>
-  <link rel="stylesheet" href="/static/css/style.css">
+    <meta charset="utf-8">
+    <title>Accueil - Conso App 2.0</title>
+    <link rel="stylesheet" href="/static/css/style.css">
+    <script src="https://kit.fontawesome.com/d30d61b515.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
+        integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 </head>
+
 <body>
-  <h1>Inscription</h1>
-  <p>Bonjour</p>
+    <header>
+        <i class="fas fa-home"></i>
+        <p>Conso Enquete</p>
+        <i class="fas fa-map-marked-alt"></i>
+        <i class="fas fa-shopping-basket"></i>
+        <i class="fas fa-user-alt"></i>
+        <i class="fas fa-sign-in-alt"></i>
+    </header>
+
+    <h1>Inscription</h1>
+    <div class="zone">
+        <p>Pseudonyme :</p>
+        <input type="text">
+        <p>Adresse mail :</p>
+        <input type="password">
+        <p>Mot de passe :</p>
+        <input type="password">
+        <p>Confirmez votre mot de passe :</p>
+        <input type="text">
+        <button type="button">S'inscrire</button>
+        <p>Déjà un compte ? <a href="/connexion">Se connecter</a></p>
+    </div>
 </body>
+
 </html>
