--- a/client/views/connexion.html
+++ b/client/views/connexion.html
@@ -11,14 +11,16 @@
 </head>
 
 <body>
-  <header>
-    <i class="fas fa-home"></i>
-    <p>Conso Enquete</p>
-    <i class="fas fa-map-marked-alt"></i>
-    <i class="fas fa-shopping-basket"></i>
-    <i class="fas fa-user-alt"></i>
-    <i class="fas fa-sign-in-alt"></i>
-  </header>
+  <div class="header">
+    <a href="accueil" class="logo"><i class="fas fa-home"></i>Conso Enquete</a>
+
+    <div class="header-right">
+      <a class="active" href="#home"><i class="fas fa-map-marked-alt"></i></a>
+      <a href="accueil"><i class="fas fa-shopping-basket"></i></a>
+      <a href="accueil"><i class="fas fa-user-alt"></i></a>
+      <a href="accueil"><i class="fas fa-sign-in-alt"></i></a>
+    </div>
+  </div>
 
   <h1>Connexion</h1>
   <div class="zone">
