--- a/client/views/inscription.html
+++ b/client/views/inscription.html
@@ -4,25 +4,44 @@
 <head>
     <meta charset="utf-8">
     <title>Accueil - Conso App 2.0</title>
-    <link rel="stylesheet" href="/static/css/style.css">
     <script src="https://kit.fontawesome.com/d30d61b515.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
-        integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+    <link rel="stylesheet" href="/static/css/style.css">
+    <script type="text/javascript" src="/static/js/menu.js"></script>
 </head>
 
 <body>
     <div class="header">
+        <a id="menu-replie"><i id=menu class="fas fa-align-justify"></i></a>
         <a href="accueil" class="logo"><i class="fas fa-home"></i>Conso Enquete</a>
-        
         <div class="header-right">
-          <a class="active" href="#home"><i class="fas fa-map-marked-alt"></i></a>
-          <a href="accueil"><i class="fas fa-shopping-basket"></i></a>
-          <a href="accueil"><i class="fas fa-user-alt"></i></a>
-          <a href="accueil"><i class="fas fa-sign-in-alt"></i></a>
+            <a class="active menu-large" href="#home"><i class="fas fa-map-marked-alt"></i></a>
+            <a class="menu-large" href="accueil"><i class="fas fa-shopping-basket"></i></a>
+            <a class="menu-large" href="accueil"><i class="fas fa-user-alt"></i></a>
+            <a class="menu-large" href="accueil"><i class="fas fa-sign-in-alt"></i></a>
+
         </div>
-      </div> 
-   
-    <h1>Inscription</h1>
+    </div>
+
+    <h1 class="display-7 text-center">Inscription</h1>
+
+    <form>
+        <div class="form-group">
+            <label for="exampleInputEmail1">Email address</label>
+            <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
+            <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
+        </div>
+        <div class="form-group">
+            <label for="exampleInputPassword1">Password</label>
+            <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
+        </div>
+        <div class="form-group form-check">
+            <input type="checkbox" class="form-check-input" id="exampleCheck1">
+            <label class="form-check-label" for="exampleCheck1">Check me out</label>
+        </div>
+        <button type="submit" class="btn btn-primary">Submit</button>
+    </form>
+    <!--
     <div class="zone">
         <p>Pseudonyme :</p>
         <input type="text">
@@ -32,9 +51,9 @@
         <input type="password">
         <p>Confirmez votre mot de passe :</p>
         <input type="text">
-        <button type="button">S'inscrire</button>
+        <button type="button" class="btn btn-primary">S'inscrire</button>
         <p>Déjà un compte ? <a href="/connexion">Se connecter</a></p>
-    </div>
+    </div>-->
 </body>
 
 </html>
