--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,32 +1,30 @@
-body{
-    background: url(../img/panier.webp) no-repeat center fixed; 
-    -webkit-background-size: cover; /* pour anciens Chrome et Safari */
+body {
+    background: url(../img/panier.webp) no-repeat center fixed;
+    -webkit-background-size: cover;
+    /* pour anciens Chrome et Safari */
     background-size: cover;
-
-    color:white;
+    color: white;
 }
-.zone{
-    position: absolute;
-     margin: auto;
-     top: 0;
-     right: 0;
-     bottom: 0;
-     left: 0;
 
+.zone {
+    /*position: absolute;
+    margin: auto;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
     background-color: white;
     text-align: center;
     border-radius: 5px;
     width: min-content;
     height: 50%;
-
-}
-header{
-    background-color: white;
+    color: black;*/
 }
 
-i{
+i {
     float: left;
 }
+
 header p {
     float: left;
 }
@@ -35,10 +33,12 @@ header p {
     overflow: hidden;
     background-color: #f1f1f1;
     padding: 10px 10px;
-  }
-  
-  /* Style the header links */
-  .header a {
+}
+
+
+/* Style the header links */
+
+.header a {
     float: left;
     color: black;
     text-align: center;
@@ -47,39 +47,45 @@ header p {
     font-size: 18px;
     line-height: 25px;
     border-radius: 4px;
-  }
-  
-  /* Style the logo link (notice that we set the same value of line-height and font-size to prevent the header to increase when the font gets bigger */
-  .header a.logo {
+}
+
+
+/* Style the logo link (notice that we set the same value of line-height and font-size to prevent the header to increase when the font gets bigger */
+
+.header a.logo {
     font-size: 25px;
     font-weight: bold;
-  }
-  
-  /* Change the background color on mouse-over */
-  .header a:hover {
+}
+
+
+/* Change the background color on mouse-over */
+
+.header a:hover {
     background-color: #ddd;
     color: black;
-  }
-  
-  /* Style the active/current link*/
-  .header a.active {
+}
+
+
+/* Style the active/current link*/
+
+.header a.active {
     background-color: dodgerblue;
     color: white;
-  }
-  
-  /* Float the link section to the right */
-  .header-right {
+}
+
+
+/* Float the link section to the right */
+
+.header-right {
     float: right;
-  }
-  
-  /* Add media queries for responsiveness - when the screen is 500px wide or less, stack the links on top of each other */
-  @media screen and (max-width: 500px) {
-    .header a {
-      float: none;
-      display: block;
-      text-align: left;
-    }
-    .header-right {
-      float: none;
-    }
-  }
+}
+
+#menu {
+    font-size: 25px;
+}
+
+h1 {
+    color: white;
+    text-shadow: 2px 2px 2px black;
+    font-weight: bold;
+}
