--- a/client/views/inscription.html
+++ b/client/views/inscription.html
@@ -27,33 +27,23 @@
 
     <form>
         <div class="form-group">
-            <label for="exampleInputEmail1">Email address</label>
-            <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
-            <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
+            <label for="pseudo">Pseudonyme</label>
+            <input type="text" class="form-control" id="pseudo" placeholder="Pseudonyme">
+        
+      
+            <label for="email">Adresse Email</label>
+            <input type="email" class="form-control" id="email" placeholder="Email">
+    
+            <label for="password1">Mot de passe</label>
+            <input type="password" class="form-control" id="password1" placeholder="Mot de passe">
+  
+            <label for="password2">Confirmez votre mot de passe</label>
+            <input type="password" class="form-control" id="password2" placeholder="Mot de passe">
         </div>
-        <div class="form-group">
-            <label for="exampleInputPassword1">Password</label>
-            <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
-        </div>
-        <div class="form-group form-check">
-            <input type="checkbox" class="form-check-input" id="exampleCheck1">
-            <label class="form-check-label" for="exampleCheck1">Check me out</label>
-        </div>
-        <button type="submit" class="btn btn-primary">Submit</button>
-    </form>
-    <!--
-    <div class="zone">
-        <p>Pseudonyme :</p>
-        <input type="text">
-        <p>Adresse mail :</p>
-        <input type="password">
-        <p>Mot de passe :</p>
-        <input type="password">
-        <p>Confirmez votre mot de passe :</p>
-        <input type="text">
-        <button type="button" class="btn btn-primary">S'inscrire</button>
+        <button type="submit" class="btn btn-primary">S'inscrire</button>
         <p>Déjà un compte ? <a href="/connexion">Se connecter</a></p>
-    </div>-->
+    </form>
+    
 </body>
 
 </html>
