--- a/client/views/connexion.html
+++ b/client/views/connexion.html
@@ -2,35 +2,42 @@
 <html lang="fr">
 
 <head>
-  <meta charset="utf-8">
-  <title>Accueil - Conso App 2.0</title>
-  <link rel="stylesheet" href="/static/css/style.css">
-  <script src="https://kit.fontawesome.com/d30d61b515.js" crossorigin="anonymous"></script>
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
-    integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+    <meta charset="utf-8">
+    <title>Connexion - Conso App 2.0</title>
+    <script src="https://kit.fontawesome.com/d30d61b515.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+    <link rel="stylesheet" href="/static/css/style.css">
+    <script type="text/javascript" src="/static/js/menu.js"></script>
 </head>
 
 <body>
-  <div class="header">
-    <a href="accueil" class="logo"><i class="fas fa-home"></i>Conso Enquete</a>
+    <div class="header">
+        <a id="menu-replie"><i id=menu class="fas fa-align-justify"></i></a>
+        <a href="accueil" class="logo"><i class="fas fa-home"></i>Conso Enquete</a>
+        <div class="header-right">
+            <a class="active menu-large" href="#home"><i class="fas fa-map-marked-alt"></i></a>
+            <a class="menu-large" href="accueil"><i class="fas fa-shopping-basket"></i></a>
+            <a class="menu-large" href="accueil"><i class="fas fa-user-alt"></i></a>
+            <a class="menu-large" href="accueil"><i class="fas fa-sign-in-alt"></i></a>
 
-    <div class="header-right">
-      <a class="active" href="#home"><i class="fas fa-map-marked-alt"></i></a>
-      <a href="accueil"><i class="fas fa-shopping-basket"></i></a>
-      <a href="accueil"><i class="fas fa-user-alt"></i></a>
-      <a href="accueil"><i class="fas fa-sign-in-alt"></i></a>
+        </div>
     </div>
-  </div>
 
-  <h1>Connexion</h1>
-  <div class="zone">
-    <p>Adresse mail :</p>
-    <input type="text">
-    <p>Mot de passe :</p>
-    <input type="password">
-    <button type="button">Se connecter</button>
-    <p>Pas de compte ? <a href="/inscription">S'inscrire</a></p>
-  </div>
+    <h1 class="display-7 text-center">Connexion</h1>
+
+    <form>
+        <div class="form-group">
+      
+            <label for="email">Adresse Email</label>
+            <input type="email" class="form-control" id="email" placeholder="Email">
+    
+            <label for="password1">Mot de passe</label>
+            <input type="password" class="form-control" id="password1" placeholder="Mot de passe">
+    </div>
+        <button type="submit" class="btn btn-primary">S'inscrire</button>
+        <p>Pas de compte ? <a href="/inscription">S'inscire</a></p>
+    </form>
+    
 </body>
 
 </html>
