--- a/public/css/style.css
+++ b/public/css/style.css
@@ -71,6 +71,7 @@ header p {
 }
 
 h1 {
+    margin-top: 5vh;
     color: white;
     text-shadow: 2px 2px 2px black;
     font-weight: bold;
@@ -81,9 +82,11 @@ button{
 }
 
 form{
-    background-color: rgba(41, 41, 41,0.8);
+    background-color: rgba(0, 0, 0,0.8);
     max-width: 300px;
     margin-left: auto;
     margin-right: auto;
+    margin-top: 30vh;
     padding: 5px;
+    border-radius: 2px;
 }
