--- a/client/views/connexion.html.twig
+++ b/client/views/connexion.html.twig
@@ -1,14 +1,7 @@
 <!doctype html>
 <html lang="fr">
 
-<head>
-    <meta charset="utf-8">
-    <title>Inscription - Conso App 2.0</title>
-    <script src="https://kit.fontawesome.com/d30d61b515.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-    <link rel="stylesheet" href="/static/css/style.css">
-    <script type="text/javascript" src="/static/js/menu.js"></script>
-</head>
+{% include 'base/head.html.twig' %}
 
 <body>
     <div class="header">
@@ -23,25 +16,19 @@
         </div>
     </div>
 
-    <h1 class="display-7 text-center">Inscription</h1>
+    <h1 class="display-7 text-center">Connexion</h1>
 
     <form>
         <div class="form-group">
-            <label for="pseudo">Pseudonyme</label>
-            <input type="text" class="form-control" id="pseudo" placeholder="Pseudonyme">
-        
       
             <label for="email">Adresse Email</label>
             <input type="email" class="form-control" id="email" placeholder="Email">
     
             <label for="password1">Mot de passe</label>
             <input type="password" class="form-control" id="password1" placeholder="Mot de passe">
-  
-            <label for="password2">Confirmez votre mot de passe</label>
-            <input type="password" class="form-control" id="password2" placeholder="Mot de passe">
-        </div>
+    </div>
         <button type="submit" class="btn btn-primary">S'inscrire</button>
-        <p>Déjà un compte ? <a href="/connexion">Se connecter</a></p>
+        <p>Pas de compte ? <a href="/inscription">S'inscire</a></p>
     </form>
     
 </body>
